--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GroupTravelPlanner</string>
+    <string name="welcome">Welcome to Group Travel Planner!</string>
 </resources>
