--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,37 @@
     <string name="app_name">GroupTravelPlanner</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="default_bio">Hey there, I am a new user.</string>
+    <string name="default_bio">Hey there, I am a new userModel.</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">saathmetravel.com</string>
+    <string name="nav_header_subtitle">
+        A social travelling app to match the travellers sharing a common journey.
+    </string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+    <string name="start_journey_text_title">Start Your Journey</string>
+    <string name="title_activity_journey_planner">Start Your Journey</string>
+    <string name="enter_source_hint_text">Enter source</string>
+    <string name="enter_destination_hint_text">Enter destination</string>
+    <string name="enter_source_info">Travellers around this location will be shown on map.</string>
+    <string name="enter_destination_info">
+        Travellers going towards this location will be shown on map.
+    </string>
+    <string name="select_range_text">
+        Select range
+    </string>
+    <string name="search_travellers">Search Travellers</string>
+    <string name="your_last_24_hours_search_history">
+        Your last 24 hours search history
+    </string>
+    <string name="default_notification_channel_id">SaathMeTravel</string>
+    <string name="title_activity_place_detail">PlaceDetailActivity</string>
+    <string name="tab_text_place_details">Details</string>
+    <string name="tab_text_reviews">Reviews</string>
+    <string name="tab_text_add_review">Add Review</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+
 
 </resources>
